k8s-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sphrx-app
  labels:
    app: sphrx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sphrx
  template:
    metadata:
      labels:
        app: sphrx
    spec:
      containers:
        - name: sphrx-container
          image: vladyslavkurmaz/ai.spherax.web.landing:25.5.0
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: sphrx-service
spec:
  selector:
    app: sphrx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sphrx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dev01.sphrx.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sphrx-service
                port:
                  number: 80
  ingressClassName: nginx
